--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cookiesjs",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "homepage": "https://github.com/franciscop/cookies.js",
   "authors": [
     "Francisco Presencia <developerfrancisco@hotmail.com>"
@@ -62,7 +62,8 @@
       "before",
       "after",
       "$",
-      "define"
+      "define",
+      "afterEach"
     ]
   }
 }
