Latest version that uses ES7 modules

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   ],
   "description": "Intuitive cookie manipulation library for the front-end",
   "main": "cookies.min.js",
+  "module": "cookies.js",
   "keywords": [
     "cookies",
     "js",
@@ -20,17 +21,20 @@
     "url": "https://github.com/franciscop/cookies.js/issues"
   },
   "scripts": {
+    "build": "rollup cookies.js --name cookies --output.format umd | uglifyjs -o cookies.min.js",
     "test": "grunt test",
-    "installphantom": "npm run phantomlib && npm run phantominst && npm run phantommove",
+    "installphantom": "npm run phantomlib && npm run phantominst",
     "phantomlib": "sudo apt-get update && sudo apt-get install build-essential chrpath libssl-dev libxft-dev libfreetype6 libfreetype6-dev libfontconfig1 libfontconfig1-dev",
-    "phantominst": "cd ~ && export PHANTOM_JS=\"phantomjs-1.9.7-linux-x86_64\" && wget https://bitbucket.org/ariya/phantomjs/downloads/$PHANTOM_JS.tar.bz2 && sudo tar xvjf $PHANTOM_JS.tar.bz2",
-    "phantommove": "sudo mv $PHANTOM_JS /usr/local/share && sudo ln -sf /usr/local/share/$PHANTOM_JS/bin/phantomjs /usr/local/bin"
+    "phantominst": "cd ~ && export PHANTOM_JS=\"phantomjs-1.9.7-linux-x86_64\" && wget https://bitbucket.org/ariya/phantomjs/downloads/$PHANTOM_JS.tar.bz2 && sudo tar xvjf $PHANTOM_JS.tar.bz2 && sudo mv $PHANTOM_JS /usr/local/share && sudo ln -sf /usr/local/share/$PHANTOM_JS/bin/phantomjs /usr/local/bin"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/franciscop/cookies.js.git"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-jest": "^21.2.0",
+    "babel-preset-env": "^1.6.1",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "grunt": "^0.4.5",
@@ -41,7 +45,9 @@
     "grunt-mocha-phantomjs": "^2.0.1",
     "grunt-semistandard": "^1.0.6",
     "mocha-phantomjs": "^4.0.2",
-    "phantomjs": "^1.9.8"
+    "phantomjs": "^1.9.8",
+    "rollup": "^0.50.0",
+    "uglify-es": "^3.1.3"
   },
   "semistandard": {
     "ignore": [
